[Issue 6] Adding reduction function etc. for Coverage.